Update dropdown scrollbar - Update dropdown scrollbar - Fix dropdown overlapping shadow issue

--- a/BikeWale.UI/sass/partials/version-dropdown.sass
+++ b/BikeWale.UI/sass/partials/version-dropdown.sass
@@ -53,12 +53,6 @@
         margin-right: 20px
         border-bottom: 1px solid color('aluminium')
 
-    .dropdown-box__submenu-list
-        width: 360px
-        max-height: 230px
-        margin-top: -1px
-        overflow-y: auto
-
     .dropdown-box-submenu-list__item
         padding-top: 16px
         padding-bottom: 16px
